SUBDIRS = include base filesystem scripting audio video input

noinst_LIBRARIES = libNebu.a

libNebu_a_SOURCES =

libNebu_a_LIBADD = \
	base/libbase.a \
	filesystem/libfilesystem.a \
	scripting/libscripting.a \
	audio/libaudio.a \
	video/libvideo.a \
	input/libinput.a

## $(top_srcdir)/lua/src/liblua.a \
## $(top_srcdir)/lua/src/lib/liblualib.a
