SUBDIRS = include filesystem base configuration audio video input game

noinst_LIBRARIES = libGLtron.a

libGLtron_a_SOURCES =

libGLtron_a_LIBADD = \
	base/libbase.a \
	filesystem/libfilesystem.a \
	audio/libaudio.a \
	video/libvideo.a \
	input/libinput.a \
	game/libgame.a

## libNebu_a_LIBADD = \
## 	base/libbase.a \
## 	filesystem/libfilesystem.a \
## 	scripting/libscripting.a \
## 	audio/libaudio.a \
## 	video/libvideo.a \
## 	input/libinput.a
