dist_pkgdata_DATA = artpack.lua \
	babbage.0.png babbage.1.png gltron_bitmap.png gltron_floor.png gltron_impact.png gltron_logo.png gltron.png gltron_traildecal.png gltron_trail.png gui.png hud-ai.png hud-buster.png hud-fps.png hud-map.png hud-mask-buster.png hud-mask-speed.png hud-mask-turbo.png hud-scores.png hud-speed.png skybox0.png skybox1.png skybox2.png skybox3.png skybox4.png skybox5.png test.bitmap.png walls.png xenotron.0.png xenotron.1.png

pkgdatadir = @datadir@/@PACKAGE@/art/default
