noinst_LIBRARIES=libaudio.a

libaudio_a_SOURCES= \
	SoundSystem.cpp Source.cpp Source3D.cpp SourceCopy.cpp \
	SourceEngine.cpp \
	SourceMusic.cpp SourceSample.cpp \
	audio_system.c

AM_CXXFLAGS = \
	-I$(top_srcdir)/nebu/include \
	-I/usr/local/include/SDL

AM_CFLAGS= \
	-I$(top_srcdir)/nebu/include
