noinst_LIBRARIES=libaudio.a

libaudio_a_SOURCES = \
	sound.c sound_glue.cpp

AM_CFLAGS = \
	-I$(top_srcdir)/lua5/include \
	-I$(top_srcdir)/nebu/include \
	-I$(top_srcdir)/src/include

AM_CXXFLAGS = \
	-I$(top_srcdir)/lua5/include \
	-I$(top_srcdir)/nebu/include \
	-I$(top_srcdir)/src/include \
	-I/usr/local/include/SDL

